--- a/apps/dashboard/.eslintrc.json
+++ b/apps/dashboard/.eslintrc.json
@@ -10,10 +10,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        "@next/next/no-html-link-for-pages": [
-          "error",
-          "apps/micro-frontend-vite-module-federation/pages"
-        ]
+        "@next/next/no-html-link-for-pages": ["error", "apps/dashboard/pages"]
       }
     },
     {
