--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
+    "framer-motion": "^11.3.29",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -15,11 +17,12 @@
     "@nx/eslint-plugin": "19.6.2",
     "@nx/jest": "19.6.2",
     "@nx/js": "19.6.2",
-    "@nx/next": "19.6.2",
+    "@nx/next": "^19.6.2",
     "@nx/workspace": "19.6.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
