--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@nextui-org/react": "^2.4.6",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.3.29",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwindcss-tables": "^0.4.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
