--- a/package.json
+++ b/package.json
@@ -12,20 +12,28 @@
     "@nextui-org/react": "^2.4.6",
     "classnames": "^2.5.1",
     "framer-motion": "^11.3.29",
+    "immer": "^10.1.1",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss-tables": "^0.4.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@module-federation/nextjs-mf": "^8.4.11",
     "@nx/eslint": "19.6.2",
     "@nx/eslint-plugin": "19.6.2",
     "@nx/jest": "19.6.2",
     "@nx/js": "19.6.2",
     "@nx/next": "^19.6.2",
+    "@nx/react": "19.6.2",
+    "@nx/vite": "19.6.2",
+    "@nx/web": "19.6.2",
     "@nx/workspace": "19.6.2",
+    "@originjs/vite-plugin-federation": "^1.3.5",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
@@ -35,6 +43,8 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "~8.57.0",
@@ -46,12 +56,15 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "~22.1.0",
     "nx": "19.6.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "vite": "^5.4.2",
+    "vitest": "^1.3.1"
   }
 }
