--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^6.26.1",
     "tailwindcss-tables": "^0.4.0",
     "tslib": "^2.3.0",
     "zustand": "^4.5.5"
@@ -65,6 +66,7 @@
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "vite": "^5.4.2",
+    "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.3.1"
   }
 }
