--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.3.29",
     "immer": "^10.1.1",
+    "jotai": "^2.9.3",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.26.1",
     "tailwindcss-tables": "^0.4.0",
-    "tslib": "^2.3.0",
-    "zustand": "^4.5.5"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@module-federation/nextjs-mf": "^8.4.11",
