--- a/apps/home-app/project.json
+++ b/apps/home-app/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "dashboard",
+  "name": "home-app",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/dashboard",
+  "sourceRoot": "apps/home-app",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project dashboard --web",
+  "// targets": "to see all targets run: nx show project home-app --web",
   "targets": {}
 }
