--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "framer-motion": "^11.3.29",
     "immer": "^10.1.1",
     "jotai": "^2.9.3",
-    "next": "14.1.4",
+    "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.26.1",
@@ -25,8 +25,8 @@
     "@nx/eslint": "19.6.2",
     "@nx/eslint-plugin": "19.6.2",
     "@nx/jest": "19.6.2",
-    "@nx/js": "19.6.2",
-    "@nx/next": "^19.6.2",
+    "@nx/js": "19.6.4",
+    "@nx/next": "19.6.4",
     "@nx/react": "19.6.2",
     "@nx/vite": "19.6.2",
     "@nx/web": "19.6.2",
